--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,6 +33,7 @@
         </activity>
         <activity android:name=".Support" >
         </activity>
+        <uses-permission android:name="android.permission.INTERNET" />
     </application>
 
 </manifest>
