--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -33,7 +33,11 @@
         </activity>
         <activity android:name=".Support" >
         </activity>
+
         <uses-permission android:name="android.permission.INTERNET" />
+
+        <activity android:name=".PiConnection" >
+        </activity>
     </application>
 
 </manifest>
