--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,5 +23,6 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.android.support:design:23.1.0'
     compile 'com.android.support:support-v4:23.1.0'
-
+    compile 'com.jcraft:jsch:0.1.53'
+    compile 'com.jcraft:jzlib:1.1.3'
 }
